zdeployment-rollout/0.2.2-registry.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: registry-service
spec:
  serviceName: registry-service
  replicas: 1
  selector:
    matchLabels:
      app: registry-service
  template:
    metadata:
      labels:
        app: registry-service
    spec:
      containers:
        - name: registry-service
          image: confluentinc/cp-schema-registry
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: registry-service
  labels:
    app: registry-service
spec:
  type: ClusterIP
  ports:
    - port: 8081
  selector:
    app: registry-service
