zdeployment-rollout/1.0.2-workspace-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workspace-service
spec:
  selector:
    matchLabels:
      app: workspace-service
  template:
    metadata:
      labels:
         app: workspace-service
    spec:
      containers:
        - name: webapp
          image: sprugit/workspace-service
          ports:
            - containerPort: 9095
          resources:
            requests:
              memory: "1Gi"
            limits:
              memory: "2Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: workspace-service
spec:
  type: ClusterIP
  selector:
    app: workspace-service
  ports:
    - name: grpc
      port: 9095
      targetPort: 9095
