zdeployment-rollout/1.0.3-notifications-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications-service
spec:
  selector:
    matchLabels:
      app: notifications-service
  template:
    metadata:
      labels:
        app: notifications-service
    spec:
      containers:
        - name: notifications
          image: sprugit/notification-service
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "1Gi"
            limits:
              memory: "2Gi"
          volumeMounts:
            - name: config
              mountPath: "/config"
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: workspace-env
---
apiVersion: v1
kind: Service
metadata:
  name: notifications-service
spec:
  type: ClusterIP
  selector:
    app: notifications-service
  ports:
    - name: notifications-port
      port: 8080
      targetPort: 8080
