zdeployment-rollout/1.0.4-workspace-rest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workspace-rest-interface
spec:
  containers:
    - name: workspace-rest
      image: sprugit/rest-service
      ports:
        - containerPort: 8080
          targetPort: 8080
      resources:
        requests:
          memory: "1Gi"
        limits:
          memory: "2Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: workspace-rest-interface
spec:
  type: ClusterIP
  selector:
    app: workspace-rest-interface
  ports:
    - name: rest-port
      port: 8080
      targetPort: 8080
