zdeployment-rollout/1.1.2-recomendations-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recomendations-service
spec:
  selector:
    matchLabels:
      app: recomendations-service
  template:
    metadata:
      labels:
        app: recomendations-service
    spec:
      containers:
        - name: webapp
          image: sprugit/recomendations-service
          ports:
            - containerPort: 50051
            - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: recomendations-service
spec:
  type: ClusterIP
  selector:
    app: recomendations-service
  ports:
    - name: recomendations-service
      port: 50051
      targetPort: 50051
    - name: port-5
      port: 5002
      targetPort: 5002
