zdeployment-rollout/1.2.1-keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-interface
spec:
  containers:
    - name: keycloak
      image: sprugit/keycloak_interface
      ports:
        - containerPort: 9523
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-interface
spec:
  type: ClusterIP
  selector:
    app: keycloak-interface
  ports:
    - name: keycloak-port
      port: 9523
      targetPort: 9523
