zdeployment-rollout/1.2.2-workspace-backup.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workspace-backup
spec:
  containers:
    - name: backup
      image: sprugit/workspace_backup
      ports:
        - containerPort: 9523
---
apiVersion: v1
kind: Service
metadata:
  name: workspace-backup
spec:
  type: ClusterIP
  selector:
    app: workspace-backup
  ports:
    - name: keycloak-port
      port: 9523
      targetPort: 9523
