zdeployment-rollout/2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: workspace.local
      http:
        paths:
          - path: /notifications
            pathType: Prefix
            backend:
              service:
                name: notifications-service
                port:
                  number: 80
          - path: /workspace
            pathType: Prefix
            backend:
              service:
                name: workspace-rest-interface
                port:
                  number: 80
          - path: /recommend
            pathType: Prefix
            backend:
              service:
                name: recomendations-service
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-ingress
spec:
  type: NodePort
  selector:
    app: my-ingress
  ports:
    - name: rest-port
      port: 80
      targetPort: 8080
